Added Jinja2 as templating engine for project template

--- a/archup/template/archup.conf.tmpl
+++ b/archup/template/archup.conf.tmpl
@@ -1,4 +1,4 @@
-name: "Project name"
+name: "{{project.name | capitalize}}"
 datamodel:
     filename: "src/datamodel.yaml"
     markdown: "src/docs/landscape/02-concepts.md"
