--- a/archup/template/src/workspace.dsl.tmpl
+++ b/archup/template/src/workspace.dsl.tmpl
@@ -2,8 +2,8 @@ workspace {
     !identifiers hierarchical
     !impliedRelationships true
 
-    name "Foo system landscape"
-    description "All Foo software systems"
+    name "{{project.name | capitalize}} system landscape"
+    description "All {{project.name | capitalize}} software systems"
 
     !docs docs/landscape/
 
